# nosql-data-modeling-patterns

./: .gitignore  docker-compose.yml
aggregate-pattern/js/: after.js  before.js  data.json  import_after.js  import_before.js  package-lock.json  package.json  readme.md
bucket-pattern/: demo.js
bucket-pattern/js/: client.js  demo.js  generate.js  package-lock.json  package.json  readme.md
polymorphic-pattern/: demo.js  package-lock.json
polymorphic-pattern/js/: client.js  data.json  demo.js  import.js  package.json
relationships/: pyproject.toml
relationships/api/: api.py  generate.py  main.py  models.py
relationships/one-to-one/: embedded.py  separate.py
relationships/python/: .env.example  README.md
relationships/python/many-to-many/: main.py
relationships/python/one-to-many/: partial.py  separate.py  utils.py
revision-pattern/: demo.py  package.json
revision-pattern/python/: .env.example  pyproject.toml  utils.py
schema-version-pattern/: package-lock.json
schema-version-pattern/js/: package.json  part1.js  part2.js
tree-and-graph-pattern/: README.md  queries.redis
tree-and-graph-pattern/data/: Employee.csv  Location.csv  REPORTS_TO.csv  WORKS_AT.csv
